# Training

./: Install_root_gtest_in_Centos7.txt  README.md
gmock_example/: CMakeLists.txt  README_Setting_Eclipse.txt
gmock_example/src/: mock_turtle.h  mock_turtle_test.cpp  painter.cpp  painter.h
gtest_bank_example/: CMakeLists.txt
gtest_bank_example/src/: GoogleTestDemo.cpp
